[package]
name = "tappy-bitcoin"
version = "0.1.0"
edition = "2021"
description = "Developer-friendly Taproot-only descriptor wallet for Bitcoin Core"
authors = ["Christian Lewe"]

[[bin]]
name = "tappy"
path = "src/main.rs"

[dependencies]
miniscript = { version = "9.0.1", features = ["rand", "serde"] }
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.5"
thiserror = "1.0.40"
