[package]
name = "tappy-bitcoin"
version = "0.1.0"
edition = "2021"
description = "Developer-friendly Taproot-only descriptor wallet for Bitcoin Core"
authors = ["Christian Lewe"]
license = "CC0-1.0"
repository = "https://github.com/uncomputable/tappy"

[[bin]]
name = "tappy"
path = "src/main.rs"

[dependencies]
elements-miniscript = { git = "https://github.com/ElementsProject/elements-miniscript", rev = "955f380", features = ["rand", "serde"] }
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.5"
thiserror = "1.0.40"
